fix horizontal scroll

--- a/src/css/tech-skills.css
+++ b/src/css/tech-skills.css
@@ -1,5 +1,7 @@
 .tech-skills{
     margin-bottom: 163px;
+    overflow: hidden;
+    height: 280px;
 }
 
 
@@ -40,6 +42,7 @@
 }
 
 .marquee2 {
+    max-width: 100vw;
     overflow: hidden;
     background-color: #E4E5E6;
     font-family: 'Poppins', sans-serif;
@@ -56,6 +59,7 @@
 
 .marquee__inner2 {
     display: flex;
+    min-width: 100%;
 }
 
 .marquee__line2 {
